<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivReturnedPicture"
        android:contentDescription="@string/returned_photo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center" />

    <ImageButton
        android:id="@+id/ibTakePicture"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:src="@drawable/abc_ic_go" 
        android:contentDescription="@string/take_picture" 
        android:layout_gravity="center" />

    <Button
        android:id="@+id/bSetWallpaper"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/set_wallpaper"
		android:layout_gravity="center" />

</LinearLayout>
